fix dark mode

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
 
   .section {
     padding: 5em 1.5em 6em 1.5em;
-    background-color: var(--primary);
+    background-color: var(--color-secondary);
 
     h2 {
       padding: 0;
