--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -57,7 +57,6 @@
     .greteen {
       position: relative;
       font-size: 1.5rem;
-      color: var(--color-black);
     
       @include respond-above(xs) {
         font-size: 2rem;
@@ -73,7 +72,7 @@
     .name {
       color: transparent;
       font-size: 4rem;
-      -webkit-text-stroke: 4px var(--color-secondary);
+      -webkit-text-stroke: 4px var(--color-primary);
       text-stroke: 4px var(--color-white);
 
         
@@ -98,10 +97,10 @@
 
   .download {
     align-self: flex-end;
-    color: var(--color-secondary);
+    color: var(--color-primary);
     font-weight: 700;
     padding: 1em 2em;
-    border: 3px solid var(--color-secondary);
+    border: 3px solid var(--color-primary);
     border-radius: 30px;
     transition: 0.3s ease;
     background-color: transparent;
@@ -125,8 +124,8 @@
     }
 
     &:hover {
-      color: var(--color-secondary-light);
-      border-color: var(--color-secondary-light);
+      color: var(--color-primary-light);
+      border-color: var(--color-primary-light);
     }
   }
 }
