--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: var(--color-dark);
 
   padding: 2.5em 0 2em 0;
 
@@ -30,6 +31,6 @@
   .description {
     text-align: center;
     max-width: 90%;
-    color: var(--color-toggle-gray-dark)
+    color: var(--color-gray);
   }
 }
