--- a/src/components/ui/ScrollTopButton/ScrollTopButton.module.scss
+++ b/src/components/ui/ScrollTopButton/ScrollTopButton.module.scss
@@ -9,7 +9,7 @@
 
     z-index: 11;
     background-color: transparent;
-    border: 2px solid var(--color-secondary-light);
+    border: 2px solid var(--color-primary-light);
     border-radius: 50px;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -21,7 +21,7 @@
 
     &::before {
         content: '';
-        border: solid var(--color-secondary-light);
+        border: solid var(--color-primary-light);
         border-width: 0 3px 3px 0;
         display: inline-block;
         padding: 3px;    
