--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -101,7 +101,7 @@
 
   &::before {
     content: '';
-    border: solid var(--color-secondary-light);
+    border: solid var(--color-primary-light);
     border-width: 0 5px 5px 0;
     display: inline-block;
     padding: 8px;    
